--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,8 @@
 
     <!--layout_row_request-->
     <string name="notification_row_title">Title</string>
-    <string name="notification_row_from">From</string>
+    <string name="notification_row_sender">Request From: </string>
+    <string name="notification_row_from">Name</string>
     <string name="notification_row_btn_accept">Accept</string>
     <string name="notification_row_btn_ignore">Ignore</string>
 
